kubernates/postgres.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  labels:
    app: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-fiap-burger
  template:
    metadata:
      labels:
        app: db-fiap-burger
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          resources:
            requests:
              memory: "128Mi"
              cpu: "200m"
            limits:
              memory: "256Mi"
              cpu: "400m"
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-script
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: postgres-script
          configMap:
            name: postgres-sql-configmap
