kubernates/postgres.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-fiap-burger-svc
spec:
  type: NodePort
  ports:
     - port: 5432
  selector:
    app: db-fiap-burger
