kubernates/fiap-burger.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tech-challenge-java-ingress
  annotations:
    kubernetes.io/ingress.class: "alb"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /cliente/?(.*)
            pathType: Prefix
            backend:
              service:
                name: tech-challenge-java-service
                port:
                  number: 8989
          - path: /historico/?(.*)
            pathType: Prefix
            backend:
              service:
                name: tech-challenge-java-service
                port:
                  number: 8989
          - path: /pedido
            pathType: Prefix
            backend:
              service:
                name: tech-challenge-java-service
                port:
                  number: 8989
          - path: /produtos
            pathType: Prefix
            backend:
              service:
                name: tech-challenge-java-service
                port:
                  number: 8989
          - path: /pagamento
            pathType: Prefix
            backend:
              service:
                name: tech-challenge-java-service
                port:
                  number: 8989
